[bug][home page] :remove white space under banner

--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -7,7 +7,7 @@
 }
 
 .page-content.index {
-	padding-bottom: 3rem;
+	padding-bottom: 0;
 }
 
 .col-md-4{
@@ -28,6 +28,7 @@
 		h3 {
 			padding-top: 2.6rem;
 			text-transform: uppercase;
+			margin-top: 0;
 		}
 	}
 
